web/styles/settings.css
/* ... */
.user-avatar-section {
    .inline-block {
        box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
    }
}

#change_password_modal,
#change_email_modal {
    max-width: 480px;
}

#change_email_modal {
    #change_email_form {
        margin: 0;
    }
}

.disabled_setting_tooltip {
    cursor: not-allowed;
}

#account-settings .deactivate_realm_button {
    margin-left: 10px;
}

#change_email_button,
#user_deactivate_account_button,
.deactivate_realm_button {
    &:disabled {
        pointer-events: none;
    }
}

.admin-realm-description {
    height: 16em;
    width: 100%;
    max-width: 500px;
    box-sizing: border-box;
}

.side-padded-container {
    padding: 0 20px;
}

.setting_notification_sound,
.play_notification_sound {
    display: inline;
    margin-right: 4px;

    i {
        font-size: 22px;
        cursor: pointer;
    }
}

.setting_notification_sound {
    text-transform: capitalize;
}

.table {
    tbody {
        border-bottom: 1px solid hsl(0, 0%, 87%);
    }
}

.wrapped-table {
    word-break: break-word;
    word-wrap: break-word;
    white-space: pre-wrap;
    white-space: normal;
}

.table-condensed td {
    vertical-align: middle;
}

#settings_content {
    table + .progressive-table-wrapper table tr.user_row td:first-of-type {
        width: 20%;
    }

    /* Limit the actions column to not using excessive width */
    .admin-table-wrapper table.admin_profile_fields_table tr .actions {
        width: 11%;
    }
}

#uploaded_files_table > tr > td:nth-of-type(1),
.upload-file-name {
    width: 43%;
    word-break: break-all;
}

.upload-mentioned-in,
.upload-date {
    word-break: normal;
}

#linkifier-settings {
    #linkifier_pattern,
    #linkifier_format_string {
        width: calc(100% - 10em - 6em);
    }
}

#playground-settings {
    #playground_pygments_language,
    #playground_name,
    #playground_url_prefix {
        width: calc(100% - 10em - 6em);
    }
}

td .button {
    margin: 2px 0;
    box-shadow: none;
}

#language_selection_modal {
    table {
        width: 90%;
        margin-top: 20px;
        border-collapse: separate;
    }

    td {
        padding-top: 1px;
    }
}

.settings-section {
    display: none;
    width: calc(100% - 40px);
    margin: 20px;

    &.show {
        display: block;
    }

    form {
        margin: 0;
    }

    .no-padding {
        padding: 0;
    }

    .settings-section-title {
        font-size: 1.4em;
        font-weight: 500;
        margin: 10px 0;

        &.transparent {
            background-color: transparent;
            color: inherit;
        }
    }

    .table-sticky-headers th {
        position: sticky;
        top: 0;
        z-index: 1;
    }

    #admin_page_users_loading_indicator,
    #attachments_loading_indicator,
    #admin_page_deactivated_users_loading_indicator,
    #admin_page_bots_loading_indicator {
        margin: 0 auto;
    }

    .loading_indicator_text {
        font-size: 12px;
        font-weight: 400;
        vertical-align: middle;
        line-height: 20px;
        display: inline-block;
        float: none;
        margin-top: 9px;
    }

    .loading_indicator_spinner {
        width: 30%;
        height: 30px;
        margin-top: 7px;
        vertical-align: middle;
        display: inline-block;
    }

    .inline {
        display: inline !important;
    }

    /* Messy implementation of buttons with text and a pencil icon in them
       having spacing before the pencil icon. */
    button.btn-link i.fa-pencil,
    button[data-dismiss="modal"] i.fa-pencil,
    .dropdown-toggle i.fa-pencil {
        margin-left: 3px;
    }

    .hidden-email {
        font-style: italic;
    }

    /* Originally the icon inherits the color of label, but when the setting
    is disabled, the color of the label is changed and thus the icon becomes
    too light. So, we set the color explicitly to original color of label to
    keep the color of the icon same even when the setting is disabled. */
    #id_realm_enable_spectator_access_label a {
        color: hsl(0, 0%, 20%);
    }

    .settings_select {
        height: 30px;
        width: 220px;
    }
}

.settings_select {
    padding: 4px 6px;
    color: hsl(0, 0%, 33%);
    border-radius: 4px;
    border: 1px solid hsl(0, 0%, 80%);
    cursor: pointer;
    background-color: hsl(0, 0%, 100%);

    &:disabled {
        cursor: not-allowed;
        background-color: hsl(0, 0%, 93%);
    }
}

#admin-user-list,
#admin-bot-list {
    .table tr:first-of-type td {
        border-top: none;
    }
}

.user_role {
    min-width: 95px;
}

.button,
.input-group {
    margin: 0 0 20px;
}

.input-group {
    /* Class to use when the following input-group is related and should
       appear just after this element. Normally the margin is 20px, but
       for related settings, we set it to 10px. */
    &.thinner {
        margin-bottom: 10px;
    }

    label.checkbox + label {
        cursor: pointer;
    }
}

.no-margin {
    margin: 0;
}

input[type="checkbox"] {
    + .inline-block {
        margin-left: 10px;
    }

    .inline-block {
        margin: -2px 0 0;
    }
}

.allow-subdomains,
.new-realm-domain-allow-subdomains {
    margin: 0 !important;
}

.realm_domains_info {
    margin-bottom: 0;
}

.admin-realm-form {
    h3 {
        margin-bottom: 10px;
    }

    .subsection-header h3 {
        display: inline;
    }
}

.display-settings-form,
.notification-settings-form {
    .subsection-header h3 {
        display: inline-block;
    }
}

#stream-specific-notify-table .unmute_stream {
    position: relative;
    left: 3px;
    top: 2px;

    &:hover {
        color: hsl(0, 0%, 20%);
        cursor: pointer;
    }
}

.organization-settings-parent > div:first-of-type {
    margin-top: 10px;
}

#id_org_profile_preview {
    margin-bottom: 20px;
    display: inline-flex;
    justify-content: space-evenly;
    align-items: center;
}

.inline-block.organization-permissions-parent div:first-of-type {
    margin-top: 10px;
}
/* ... */

